--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title>Learning About Compliance Reviews</title>
-    <link rel="stylesheet" type="text/css" href="Styles/stylesheet.css">
-  </head>
+    </head>
+      <link rel="stylesheet" type="text/css" href="Styles\stylesheet.css">
     <header> FMCSA and Compliance Reviews</header>
     <nav class="links">
     <a href="index.html">Home</a>
