--- a/projects.html
+++ b/projects.html
@@ -5,7 +5,7 @@
     <title>List of Project</title>
   </head>
       <body>
-  <link rel="stylesheet" type="text/css" href="Styles/stylesheet.css">
+  <link rel="stylesheet" type="text/css" href="Styles\stylesheet.css">
   <header>
       List of Future Projects
   </header>
