--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>Learning About Compliance Reviews</title>
     </head>
-      <link rel="stylesheet" type="text/css" href="Styles\stylesheet.css">
+      <link rel="stylesheet" type="text/css" href="stylesheet.css">
     <header> FMCSA and Compliance Reviews</header>
     <nav class="links">
     <a href="index.html">Home</a>
