--- a/Match-the-Mockup.html
+++ b/Match-the-Mockup.html
@@ -11,21 +11,19 @@
     <br />
     <br />
     </div>
-    <link rel="stylesheet" type="text/css" href="stylesheet.css">
-      <img src="lesson04-mock2-banner-image.jpg" width=100%" height="200" alt= "Black white kittens">
-
-    <div class="Menuheader">
-    <a href="#About">About/</a>
+      <link rel="stylesheet" type="text/css" href="stylesheet.css">
+      <img src="lesson04-mock2-banner-image.jpg" width="100%" height="200" alt="Black white kittens">
+  <div class="Menuheader">
+      <a href="#About">About/</a>
     <a href="lesson04-mock2.html">Rates/</a>
     <a href="#Liablity-Release">Liablity Release/</a>
     <a href="#Kitty-Profiles">Kitty Profiles/</a>
     <a href="#Book-A-Cat">Book a Cat</a>
-  </nav>
   </div>
   <div class="sideinfo">
-  <img src="lesson04-mock3-sidebar-cat.jpg" width="275" height="200" alt= "Picture of kitten">
-  <h2>CATS IN THE NEWS</h2>
-    <p>Chew iPad power cord why must they do that, grab pompom in mouth and put in water dish.<br>
+    <img src="lesson04-mock3-sidebar-cat.jpg" width="275" height="200"  alt="Picture of kitten">
+    <h2>CATS IN THE NEWS</h2>
+    <p>Chew iPad power cord why must they do that, grab pompom in mouth and put in water dish.
     </p>
     <a href="#Find-Out-Moore">Find Out Moore >></a>
     <h2>CAT OF THE WEEK</h2>
@@ -56,19 +54,24 @@
     Fall over dead (not really but gets sypathy) fooled again thinking the dog likes me. Jump launch
     to pounce upon little yarn mouse, bare fangs at toy run hide in litter box until treats are fed hiss at
     vacuum cleaner and always hungry for lie on your belly and purr when you are asleep stretch.
-  <br />
-  <br />
+    <br />
+    <br />
     Aborpos nisto inci tet aut que volupti beruptiberro to ex
     esseque invenienihil imaximu scideru ptistiusam consequun </p>
-  <br />
+    </div>
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
   <div class ="footerpic">
      <img src="lesson04-mock4-footer-image.jpg" width="100%" height="200" alt= "Black white kittens">
-   </div/
-   <Footer>
-   <div class="Menufooter">
+   </div>
+   <footer class="Menufooterr">
      <h3>Cat ipsum dolor sit amet, find something else more interesting, so
      catty ipsum mesmerizing birds sleep on my human’s head.</h3>
-    </div>
+   </footer>
     <br />
     <br />
     <br />
@@ -81,6 +84,5 @@
   <div class="bottomcopyright">
     <p> 2018 Kitties to Go! LLC | Seattle, WA</p>
     </div>
-    </footer>
-</body>
+  </body>
 </html>
