--- a/lesson04-mock2.html
+++ b/lesson04-mock2.html
@@ -4,26 +4,25 @@
     <meta charset="utf-8">
     <title>Kitties To Go</title>
     </head>
-  <body>
-    <div class="Title1">
-  <header>KITTIES TO GO! Seattle's Premier drive-thru cat rentals
-    <br />
-    <br />
-    <br />
-    </div>
-  <link rel="stylesheet" type="text/css" href="stylesheet.css">
-      <img src="lesson04-mock2-banner-image.jpg" width=100%" height="200" alt= "Black white kittens">
-  </header>
+    <body>
+     <div class="Title1">
+   <header>KITTIES TO GO! Seattle's Premier drive-thru cat rentals
+     <br />
+     <br />
+     <br />
+   </div>
+      <link rel="stylesheet" type="text/css" href="stylesheet.css">
+      <img src="lesson04-mock2-banner-image.jpg" width="100%" height="200" alt= "Black white kittens">
+   </header>
       <nav class="Menuheader">
       <a href="#About">About/</a>
-      <a href="lesson04-mock2.html">Rates/</a>
+      <a href="Match-the-Mockup.html">Rates/</a>
       <a href="#Liablity-Release">Liablity Release/</a>
       <a href="#Kitty-Profiles">Kitty Profiles/</a>
       <a href="#Book-A-Cat">Book a Cat</a>
     </nav>
       <div class="sideinfo">
         <img src="lesson04-mock3-sidebar-cat.jpg" width="275" height="200" alt= "Picture of kitten">
-        <a href="#Find-Out-Moore">Find Out Moore >></a>
         </div>
         <br />
         <br />
